recipe service unit tests